--- a/src/theme/themeTailwind.css
+++ b/src/theme/themeTailwind.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 @theme {
-  --color-primary: #1446AA;
-  --color-secondary: #FAAE2E;
+ --color-primary: #1446aa;
+ --color-secondary: #faae2e;
+ --color-tertiary: #08234f;
+ --font-Vazirmatn: "Vazirmatn";
 }
